# PyPixiv-API

./: LICENSE  setup.cfg
pypixiv-api/: api.py  exceptions.py
