[metadata]
name = PyPixiv-API
version = file: pypixiv_api/VERSION
description = A nice, simple API tool for interacting with Pixiv.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mircoxi/PyPixiv-API
author = Mircoxi
author_email = mircoxi@protonmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
download_url = https://github.com/Mircoxi/PyPixiv-API/releases
keywords =
    pixiv
    api
    pixiv-api
    pixivapi

[options]
packages = find:
install_requires =
    requests>=2.28.2
python_requires = >=3.10
include_package_data = True

[options.extras_require]
dev =
    black>=22.12.0
    flake8>=6.0.0
    isort>=5.11.4
    setuptools>=65.6.3

[options.package_data]
pypixiv_api = py.typed

[flake8]
max-complexity = 10
max-line-length = 127

[black]
max-line-length = 127